with peraddress as (
    select et."from" as address, count(distinct et.tx_hash) as safe_transactions
    from ethereum.traces et
    join gnosis_safe.view_safes s
        on s.address = et."from"
    where et.success = True 
        and substring(et."input" for 4) = '\x6a761202' -- execTransction method of v0.1.0, v1.0.0, v1.1.0, v1.1.1, v1.2.0, v1.3.0
        AND et.call_type = 'delegatecall'
    	AND et.to in (  -- mastercopies
    	    '\x8942595A2dC5181Df0465AF0D7be08c8f23C93af', -- 0.1.0
    	    '\xb6029EA3B2c51D09a50B53CA8012FeEB05bDa35A', -- 1.0.0
    	    '\xaE32496491b53841efb51829d6f886387708F99B', -- 1.1.0
    	    '\x34CfAC646f301356fAa8B21e94227e3583Fe3F5F', -- 1.1.1
    	    '\x6851d6fdfafd08c0295c392436245e5bc78b0185', -- 1.2.0
    	    '\xd9db270c1b5e3bd161e8c8503c55ceabee709552'  -- 1.3.0
    	) 
    group by 1)
select 
address
from peraddress
where safe_transactions=1
